--- a/package.json
+++ b/package.json
@@ -2,25 +2,28 @@
   "name": "rollup-starter-lib",
   "version": "1.0.0",
   "browser": "dist/saver.min.js",
-  "dependencies": {
-    "arrive": "^2.4.1",
-    "file-saver": "^2.0.2",
-    "jquery": "^3.4.1",
-    "three": "^0.109.0"
-  },
-  "devDependencies": {
-    "rollup": "^1.24.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser": "^5.1.1"
-  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "clean": "rimraf ./dist",
+    "pre:build": "npm run clean",
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "pretest": "npm run build"
   },
-  "files": [
-    "dist"
-  ]
+  "dependencies": {
+    "arrive": "^2.4.1",
+    "file-saver": "^2.0.2",
+    "jquery": "^3.4.1",
+    "three": "^0.115.0"
+  },
+  "devDependencies": {
+    "rimraf": "^3.0.2",
+    "rollup": "^2.2.0",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-replace": "^2.3.1",
+    "rollup-plugin-terser": "^5.3.0"
+  }
 }
