--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rollup-starter-lib",
   "version": "1.0.0",
-  "browser": "dist/saver.min.js",
+  "browser": "dist/saver.min.[hash].js",
   "files": [
     "dist"
   ],
@@ -19,11 +19,12 @@
     "three": "^0.115.0"
   },
   "devDependencies": {
-    "rimraf": "^3.0.2",
-    "rollup": "^2.2.0",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-replace": "^2.3.1",
-    "rollup-plugin-terser": "^5.3.0"
+    "rimraf": "^3.0.2",
+    "rollup": "^2.2.0",
+    "rollup-plugin-terser": "^5.3.0",
+    "uuid": "^7.0.2"
   }
 }
